Fix codemirror z-index

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -34,3 +34,5 @@ table {
         visibility: visible;
     }
 }
+
+.CodeMirror { z-index: 0 }
